fix(vue/element): fix Space child elements gap when they contains invisible fields (#3495)

--- a/packages/element/src/space/style.scss
+++ b/packages/element/src/space/style.scss
@@ -20,4 +20,11 @@
       align-items: baseline;
     }
   }
+
+  &-item {
+    display: contents;
+    &:empty {
+      display: none;
+    }
+  }
 }
